# xGUI

./: .gitignore  .replit  README.md  pyproject.toml
src/xgui/: __init__.py  nodes.py  template.py
src/xgui/old/: __init__.py  core.py  nodes.py  utils.py
