[tool.poetry]
name = "xgui"
version = "0.1.0"
description = "Create Tkinter applications with XML"
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"
readme = "README.md"
# homepage = "https://mc-rpr.github.io/xGUI/"
repository = "https://github.com/MC-RPR/xGUI"

[tool.poetry.dependencies]
python = "^3.8"
defusedxml = { version = "^0.7", optional = true }

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
safe = ["defusedxml"]

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
